<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.CityFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorPrimary"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/city1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="20dp"
        android:text="@string/Pyatigorsk"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/city2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="5dp"
        android:text="@string/Yessentuki"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/city3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="5dp"
        android:text="@string/Moscow"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/city4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="5dp"
        android:text="@string/St_P"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp" />
</LinearLayout>
