<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/clouds"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/weather"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/temperatureOfDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradus_forengheit"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tempmeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/pressuregroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/title_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/windgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/title_wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Wind"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wind_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/meters_per_second"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>